--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -128,6 +128,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/js/chat.js"></script>
     <script src="/js/producto.js"></script>
 </body>
 </html>
