Practica-de-integracion-sobre-tu-ecommerce-1.2

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -50,6 +50,9 @@
             {{#if isAdmin}}
                 <a href="/GestionProductos">Gestión de productos</a>
             {{/if}}
+            {{#if isPremium}}
+                <a href="/GestionProductos">Gestión de productos</a>
+            {{/if}}
         {{else}}
             <h4 class="p-servicios">Ofrecemos trabajos y productos de la más alta calidad</h4>
             <a href="/login"><h4>Iniciar sesión</h4></a>
