Practica-de-integracion-sobre-tu-ecommerce-1.6

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -49,6 +49,7 @@
             <a href="/api/sessions/logout"><h5>Cerrar sesión</h5></a>
             {{#if isAdmin}}
                 <a href="/GestionProductos">Gestión de productos</a>
+                <a href="/gestionDeUsuarios">Gestión de usuarios</a>
             {{/if}}
             {{#if isPremium}}
                 <a href="/GestionProductos">Gestión de productos</a>
