--- a/src/views/cart.hbs
+++ b/src/views/cart.hbs
@@ -12,7 +12,6 @@
 </head>
 <body id="grilla-gral">
     <header id="header-navegacion">
-        <!-- Menú de navegación -->
         <nav class="navbar navbar-expand-lg bg-light w-100">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">
@@ -23,21 +22,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="navegacion-web">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="/">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="/quienessomos">Quienes somos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="/servicios">Servicios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="/galeria">Galería</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="/contacto">Contacto</a>
-                        </li>
+                        <li class="nav-item"><a class="nav-link active" href="/">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="/quienessomos">Quienes somos</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="/servicios">Servicios</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="/galeria">Galería</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="/contacto">Contacto</a></li>
                     </ul>
                 </div>
             </div>
@@ -46,25 +35,31 @@
         <h2>Tu Carrito</h2>
     </header>
 
-    <main id="cart">
+    <main id="cart" class="container">
         <h1>Detalles del Carrito</h1>
-        <ul>
-            {{#each products}}
+        
+        <ul class="list-group">
+            {{#each cart.products}}
                 <div class="product">
-                    <img src="{{this.product.thumbnails}}" alt="Imagen">
-                    <h3>{{this.product.title}}</h3>
-                    <p>{{this.product.description}}</p>
-                    <p>Precio: {{this.product.price}}</p>
+                    <img src="{{this.thumbnails}}" alt="Imagen" style="width: 100px; height: auto;">
+                    <h3>{{this.title}}</h3>
+                    <p>{{this.description}}</p>
+                    <p>Precio: ${{this.price}}</p>
                     <p>Cantidad: {{this.quantity}}</p>
+                    <p>Id de producto: {{this._id}}</p>
                 </div>
             {{/each}}
-            <div>
-                <p>ID del Carrito: {{cart._id}}</p>
-            </div>
         </ul>
+
+        <div class="mt-4">
+            <h4>ID del Carrito: <span id="cartId">{{cart._id}}</span></h4>
+            <h4>Total: ${{cart.totalPrice}}</h4>
+            <button id="purchaseButton" class="btn btn-success">Comprar</button>
+        </div>
+        
     </main>
 
-    <footer id="footer">
+    <footer id="footer" class="text-center mt-4">
         Web creada por Adrián Fernández. Todos los derechos reservados.
     </footer>
 
@@ -72,5 +67,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Script de SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    
+    <script src="/js/cart.js"></script>
 </body>
 </html>
