--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="soporte, reparacion de pc, periféricos, mantenimiento de pc, backup, ayuda pc lenta, instalacion de windows, formateo, disco rigido, disco solido, auriculares, gabinete, actualizacion de pc">
-    <meta name="Description" content="Tenemos los técnicos más especializados en diferentes ramas de la tecnología para que sin dudas podamos ayudarte con tus necesidades">
+    <meta name="description" content="Tenemos los técnicos más especializados en diferentes ramas de la tecnología para que sin dudas podamos ayudarte con tus necesidades">
+    <title>TecniPC | Productos y servicios</title>
+
+    <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
-    <title id="Title">TecniPC | Productos y servicios</title>
 </head>
 <body id="grilla-gral">
+    <!-- Header -->
     <header id="header-navegacion">
         <nav class="navbar navbar-expand-lg bg-light w-100">
             <div class="container-fluid">
@@ -25,7 +28,7 @@
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="../">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="../pages/QuienesSomos.html">Quienes somos</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="../pages/Servicios.html">Servicios</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="../pages/Galeria.html">Galeria</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="../pages/Galeria.html">Galería</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="../pages/Contacto.html">Contacto</a></li>
                     </ul>
                 </div>
@@ -36,9 +39,11 @@
         <h2>Productos y servicios</h2>
     </header>
 
+    <!-- Main Content -->
     <main id="servicios">
+        
         <div id="chatBox">
-            <input type="text" name="chatInput" id="chatInput">
+            <input type="text" name="chatInput" id="chatInput" placeholder="Escribe tu mensaje...">
             <button id="chatSendBtn">Enviar</button>
             <div id="chatMessages"></div>
         </div>
@@ -60,7 +65,7 @@
             <a href="/register"><h4>Registrarse</h4></a>
         {{/if}}
 
-        {{!-- Contenedor de productos añadidos --}}
+        <!-- Contenedor de productos añadidos -->
         <div class="padre-cards" id="product-container">
             {{#each products}}
             <div class="card-servicios">
@@ -74,6 +79,8 @@
             </div>
             {{/each}}
         </div>
+
+        <!-- Paginación -->
         <div class="Botones-paginas">
             {{#if hasPrevPage}}
                 <a href="/?numPage={{prevPage}}{{#if category}}&category={{category}}{{/if}}{{#if status}}&status={{status}}{{/if}}{{#if sortByPrice}}&sortByPrice={{sortByPrice}}{{/if}}" class="letras-paginas">Anterior</a>
@@ -84,6 +91,7 @@
             {{/if}}
         </div>
 
+        <!-- Banner de productos y servicios -->
         <section id="banner__productosyservicios">
             <h3>Seguridad informática</h3>
             <div id="padre__banner">
@@ -107,6 +115,7 @@
         </section>
     </main>
 
+    <!-- Modal de detalles del producto -->
     <div class="modal fade" id="productModal" tabindex="-1" aria-labelledby="productModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
@@ -124,15 +133,17 @@
         </div>
     </div>
 
+    <!-- Footer -->
     <footer id="footer">
         Web creada por Adrián Fernández. Todos los derechos reservados.
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="/js/chat.js"></script>
-    <script src="/js/producto.js"></script>
+    <script type="module" src="/js/producto.js"></script>
 </body>
 </html>
