--- a/src/Public/css/styles.css
+++ b/src/Public/css/styles.css
@@ -61,6 +61,11 @@ ul {
   padding: 20px;
 }
 
+#user-list {
+  color: white;
+  font-size: 2rem;
+}
+
 #user-info p {
   font-size: 16px;
   margin: 5px 0;
