Protecto-Final-Backend-1.8

--- a/src/views/current.hbs
+++ b/src/views/current.hbs
@@ -40,6 +40,8 @@
             <h5 id="user-fullname"></h5>
             <h5>Mail registrado</h5>
             <h5 id="user-email"></h5>
+            <h5>Rol de usuario</h5>
+            <h5 id="user-rol"></h5>
         </div>
     </header>
 
